--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <title>Document</title>
+
+    <script type="text/javascript">
+        function scrollMenuRight() {
+            document.getElementById('horizontal-menu').scrollBy({left: 80, top: 0, behavior: 'smooth'});
+        }
+
+        function scrollMenuLeft() {
+            document.getElementById('horizontal-menu').scrollBy({left: -80, top: 0, behavior: 'smooth'});
+        }
+    </script>
 </head>
 <body>
 
@@ -30,12 +40,13 @@
 
 <div class="container-fluid bg-image"></div>
 
+
 <div style="margin: auto; width: 900px">
 
     <div class="container">
-        <div class="row">
+        <div class="row" style="height: 80px">
             <div class="col-lg-6">
-                <a href="index.html">
+                <a href="index.html" style="color: #333333">
                     <div class="logo-container">
                         <img src="images/logo.png" class="logo-image" alt="Logo">
                         <div class="logo-text f-w-900">PUB APP</div>
@@ -50,36 +61,51 @@
         </div>
     </div>
 
-    <div class="container">
-        <div class="d-flex align-items-center">
-            <a href="#" class="search-menu">
-                <i class="bi bi-search blue-icon"></i>
-            </a>
+</div>
+<div class="container-fluid delimiter"></div>
 
-            <a href="#" class="arrow-left">
-                <i class="bi bi-chevron-left"></i>
-            </a>
 
-            <div class="container-fluid flex-grow-1">
-                <div class="d-flex flex-row flex-nowrap cat-menu">
-                    <a href="#" class="cat-menu-active">Toate</a>
-                    <a href="#">Meniul zilei</a>
-                    <a href="#">Aperitive</a>
-                    <a href="#">Grill & Snitel</a>
-                    <a href="#">Burgers</a>
-                    <a href="#">Pizza</a>
-                    <a href="#">Supe</a>
-                    <a href="#">Paste</a>
-                    <a href="#">Sucuri</a>
+<div class="container-fluid horizontal-menu">
+    <div style="margin: auto; width: 900px">
+        <div class="container">
+            <div class="d-flex align-items-center">
+                <a href="#" class="search-menu me-3">
+                    <i class="bi bi-search blue-icon"></i>
+                </a>
+
+                <a href="#" class="arrow-left">
+                    <i class="bi bi-chevron-left" onclick="scrollMenuLeft()"></i>
+                </a>
+
+                <div class="container-fluid flex-grow-1 overflow-hidden p-0">
+                    <div class="d-flex flex-row flex-nowrap cat-menu" id="horizontal-menu">
+                        <a href="#" class="cat-menu-active">Toate</a>
+                        <a href="#">Meniul zilei</a>
+                        <a href="#">Aperitive</a>
+                        <a href="#">Grill & Snitel</a>
+                        <a href="#">Burgers</a>
+                        <a href="#">Pizza</a>
+                        <a href="#">Supe</a>
+                        <a href="#">Paste</a>
+                        <a href="#">Sucuri</a>
+                        <a href="#">Bere</a>
+                        <a href="#">Tarie</a>
+                        <a href="#">Prajituri</a>
+                        <a href="#">Tocanite</a>
+                    </div>
                 </div>
+
+                <a href="#" class="arrow-right ms-2">
+                    <i class="bi bi-chevron-right" onclick="scrollMenuRight()"></i>
+                </a>
+
             </div>
-
-            <a href="#" class="arrow-right">
-                <i class="bi bi-chevron-right"></i>
-            </a>
-
         </div>
     </div>
+
+</div>
+
+<div style="margin: auto; width: 900px">
 
     <div class="container py-3">
         <h4 style="font-size: 1.33rem" class="f-w-800">Meniul zilei</h4>
@@ -90,7 +116,7 @@
                         <div class="col-md-9">
                             <div class="card-body">
                                 <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                <p class=" f-w-800 f-s-price"> 120 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                             </div>
                         </div>
                         <div class="col-md-3 card-image d-flex align-items-center">
@@ -105,12 +131,13 @@
                     <div class="row g-0">
                         <div class="col-md-9">
                             <div class="card-body">
-                                <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                <p class="card-text">Cordon bleu din piept de pui, cartofi prajiti
+                                    si sos tartar + o bautura gratis</p>
+                                <p class=" f-w-800 f-s-price"> 25 Lei <small class="f-w-700 f-s-gr">(400g)</small></p>
                             </div>
                         </div>
                         <div class="col-md-3 card-image d-flex align-items-center">
-                            <img src="images/card-image.png" alt="Card image">
+                            <img src="images/card-image1.png" alt="Card image">
                         </div>
                     </div>
                 </div>
@@ -122,12 +149,12 @@
                     <div class="row g-0">
                         <div class="col-md-9">
                             <div class="card-body">
-                                <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                <p class="card-text">Carne de porc gatita lent, cartofi prajiti, sos cedar, rosii, jalapeno</p>
+                                <p class=" f-w-800 f-s-price"> 80 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                             </div>
                         </div>
                         <div class="col-md-3 card-image d-flex align-items-center">
-                            <img src="images/card-image.png" alt="Card image">
+                            <img src="images/card-image2.png" alt="Card image">
                         </div>
                     </div>
                 </div>
@@ -148,12 +175,12 @@
                             <div class="row g-0">
                                 <div class="col-md-9">
                                     <div class="card-body">
-                                        <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                        <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                        <p class="card-text">Bulete de mozzarella</p>
+                                        <p class=" f-w-800 f-s-price"> 15 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 card-image d-flex align-items-center">
-                                    <img src="images/card-image.png" alt="Card image">
+                                    <img src="images/card-image3.png" alt="Card image">
                                 </div>
                             </div>
                         </div>
@@ -164,12 +191,12 @@
                             <div class="row g-0">
                                 <div class="col-md-9">
                                     <div class="card-body">
-                                        <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                        <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                        <p class="card-text">Tacos de porc cu cartofi prajiti si sos spicy mayo + o bautura gratis</p>
+                                        <p class=" f-w-800 f-s-price"> 35 Lei <small class="f-w-700 f-s-gr">(400g)</small></p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 card-image d-flex align-items-center">
-                                    <img src="images/card-image.png" alt="Card image">
+                                    <img src="images/card-image4.png" alt="Card image">
                                 </div>
                             </div>
                         </div>
@@ -181,12 +208,12 @@
                             <div class="row g-0">
                                 <div class="col-md-9">
                                     <div class="card-body">
-                                        <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                        <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                        <p class="card-text">Bruschette cu somon fume</p>
+                                        <p class=" f-w-800 f-s-price"> 80 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 card-image d-flex align-items-center">
-                                    <img src="images/card-image.png" alt="Card image">
+                                    <img src="images/card-image5.png" alt="Card image">
                                 </div>
                             </div>
                         </div>
@@ -196,12 +223,12 @@
                             <div class="row g-0">
                                 <div class="col-md-9">
                                     <div class="card-body">
-                                        <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                        <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                        <p class="card-text">Bruschette cu ton</p>
+                                        <p class=" f-w-800 f-s-price"> 80 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                                     </div>
                                 </div>
                                 <div class="col-md-3 card-image d-flex align-items-center">
-                                    <img src="images/card-image.png" alt="Card image">
+                                    <img src="images/card-image6.png" alt="Card image">
                                 </div>
                             </div>
                         </div>
@@ -222,11 +249,11 @@
                         <div class="col-md-9">
                             <div class="card-body">
                                 <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                <p class=" f-w-800 f-s-price"> 120 Lei <small class="f-w-700 f-s-gr">(340g)</small></p>
                             </div>
                         </div>
                         <div class="col-md-3 card-image d-flex align-items-center">
-                            <img src="images/card-image.png" alt="Card image">
+                            <img src="images/card-image7.png" alt="Card image">
                         </div>
                     </div>
                 </div>
@@ -237,12 +264,12 @@
                     <div class="row g-0">
                         <div class="col-md-9">
                             <div class="card-body">
-                                <p class="card-text">Steak de porc cu sos de mustar si cartofi wedges rumeniti la cuptor</p>
-                                <p class="card-text f-w-800 f-s-price"> 120 lei <small class="f-w-700 f-s-gr">(120g)</small></p>
+                                <p class="card-text">Cordon bleu din piept de pui, cartofi prajiti si sos tartar + o bautura gratis</p>
+                                <p class=" f-w-800 f-s-price"> 25 Lei <small class="f-w-700 f-s-gr">(400g)</small></p>
                             </div>
                         </div>
                         <div class="col-md-3 card-image d-flex align-items-center">
-                            <img src="images/card-image.png" alt="Card image">
+                            <img src="images/card-image8.png" alt="Card image">
                         </div>
                     </div>
                 </div>
@@ -252,6 +279,7 @@
 </div>
 
 <div class="cart">
+
     <p class="f-w-800 f-s-18 m-4">Cosul tau de cumparaturi</p>
     <div class="card m-4 p-3">
         <div class="d-flex">
@@ -266,7 +294,7 @@
                         <span class="f-w-800 mx-2"> 1 </span>
                         <button type="button" class="plus-button"> + </button>
                     </div>
-                    <div class="card-text f-w-800 f-s-price"> 120 lei</div>
+                    <div class="f-w-800 f-s-price"> 120 lei</div>
                 </div>
             </div>
             <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="Close" style="float: right"></button>
@@ -286,7 +314,7 @@
                         <span class="f-w-800 mx-2"> 1 </span>
                         <button type="button" class="plus-button"> + </button>
                     </div>
-                    <div class="card-text f-w-800 f-s-price"> 120 lei</div>
+                    <div class="f-w-800 f-s-price"> 120 lei</div>
                 </div>
             </div>
             <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="Close" style="float: right"></button>
@@ -306,12 +334,14 @@
                         <span class="f-w-800 mx-2"> 1 </span>
                         <button type="button" class="plus-button"> + </button>
                     </div>
-                    <div class="card-text f-w-800 f-s-price"> 120 lei</div>
+                    <div class="f-w-800 f-s-price"> 120 lei</div>
                 </div>
             </div>
             <button type="button" class="btn-close ms-2" data-bs-dismiss="modal" aria-label="Close" style="float: right"></button>
         </div>
     </div>
+
+    <div class="delimiter mx-4"></div>
 
     <div class="d-flex justify-content-between m-4">
         <span class="f-s-gr">Sub-total</span>
